--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,11 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 
 .menu-title.small {
     line-height: 1.5;
-    transform: translate3d(0, 10px, 0);
+    transform: translate3d(0, 10px, 0) !important;
     font-size: 12px;
     font-weight: bold;
 }
 
 body.vertical-layout.vertical-menu.menu-expanded .main-menu .navigation>li:hover>a>span.small {
-    transform: translate3d(4px, 10px, 0);
+    transform: translate3d(4px, 10px, 0) !important;
 }
