--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,14 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 body.vertical-layout.vertical-menu.menu-expanded .main-menu .navigation>li:hover>a>span.small {
     transform: translate3d(4px, 10px, 0) !important;
 }
+
+.avatar img {
+    width: 36px;
+    height: 36px;
+    object-fit: cover;
+}
+
+.dropdown-item .avatar img {
+    width: 30px;
+    height: 30px;
+}
